Some design changes

--- a/app/src/main/res/layout-land/activity_game.xml
+++ b/app/src/main/res/layout-land/activity_game.xml
@@ -95,125 +95,141 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
 
                 <com.rajatgoyal.puzzle15.view.Tile
                     android:id="@+id/btn00"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_margin="1dp" />
 
                 <com.rajatgoyal.puzzle15.view.Tile
                     android:id="@+id/btn01"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_margin="1dp" />
 
                 <com.rajatgoyal.puzzle15.view.Tile
                     android:id="@+id/btn02"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_margin="1dp" />
 
                 <com.rajatgoyal.puzzle15.view.Tile
                     android:id="@+id/btn03"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_margin="1dp" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
 
                 <com.rajatgoyal.puzzle15.view.Tile
                     android:id="@+id/btn10"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_margin="1dp" />
 
                 <com.rajatgoyal.puzzle15.view.Tile
                     android:id="@+id/btn11"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_margin="1dp" />
 
                 <com.rajatgoyal.puzzle15.view.Tile
                     android:id="@+id/btn12"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_margin="1dp" />
 
                 <com.rajatgoyal.puzzle15.view.Tile
                     android:id="@+id/btn13"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_margin="1dp" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
 
                 <com.rajatgoyal.puzzle15.view.Tile
                     android:id="@+id/btn20"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_margin="1dp" />
 
                 <com.rajatgoyal.puzzle15.view.Tile
                     android:id="@+id/btn21"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_margin="1dp" />
 
                 <com.rajatgoyal.puzzle15.view.Tile
                     android:id="@+id/btn22"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_margin="1dp" />
 
                 <com.rajatgoyal.puzzle15.view.Tile
                     android:id="@+id/btn23"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_margin="1dp" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
 
                 <com.rajatgoyal.puzzle15.view.Tile
                     android:id="@+id/btn30"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_margin="1dp" />
 
                 <com.rajatgoyal.puzzle15.view.Tile
                     android:id="@+id/btn31"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_margin="1dp" />
 
                 <com.rajatgoyal.puzzle15.view.Tile
                     android:id="@+id/btn32"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_margin="1dp" />
 
                 <com.rajatgoyal.puzzle15.view.Tile
                     android:id="@+id/btn33"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_margin="1dp" />
 
             </LinearLayout>
