Change color theme

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,9 @@
     <color name="colorAccent">#3083AC</color>
 
     <color name="background">#3083AC</color>
-    <color name="light">#90caf9</color>
+    <color name="light">#FFFFFF</color>
+    <color name="game_background">#90caf9</color>
+
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
 </resources>
