--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/game_background"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="20dp"
@@ -102,6 +102,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="1dp"
+                    android:background="@color/light"
                     android:layout_weight="1"/>
 
                 <com.rajatgoyal.puzzle15.view.Tile
