--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -11,16 +11,22 @@
         android:layout_height="wrap_content"
         app:layout_scrollFlags="scroll|enterAlways"
         android:elevation="4dp"
+        android:contentInsetLeft="0dp"
+        android:contentInsetStart="0dp"
+        app:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp"
+        android:contentInsetRight="0dp"
+        android:contentInsetEnd="0dp"
+        app:contentInsetRight="0dp"
+        app:contentInsetEnd="0dp"
         app:popupTheme="@style/AppTheme.PopupOverlay">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="center"
-            android:layout_weight="1"
             android:background="@color/light"
             android:gravity="center"
-            android:layout_marginRight="16dp"
             android:text="@string/app_name"
             android:textColor="@color/background"
             android:textSize="30sp" />
