--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,10 +26,23 @@
             android:src="@drawable/icon" />
 
         <Button
-            android:id="@+id/newGame"
+            android:id="@+id/resumeGame"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:layout_weight="0"
+            android:background="@color/light"
+            android:text="@string/resume_game"
+            android:textAllCaps="false"
+            android:textColor="@color/background"
+            android:textSize="20sp"
+            android:visibility="gone"/>
+
+        <Button
+            android:id="@+id/newGame"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_weight="0"
             android:background="@color/light"
             android:text="@string/new_game"
