--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:src="@drawable/icon" />
 
         <Button
-            android:id="@+id/resumeGame"
+            android:id="@+id/resume_game"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -39,7 +39,7 @@
             android:visibility="gone"/>
 
         <Button
-            android:id="@+id/newGame"
+            android:id="@+id/new_game"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -51,7 +51,7 @@
             android:textSize="20sp" />
 
         <Button
-            android:id="@+id/highScore"
+            android:id="@+id/high_score"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
