--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,14 @@
     android:layout_height="match_parent"
     tools:context="com.rajatgoyal.puzzle15.ui.MainActivity">
 
+    <FrameLayout
+        android:id="@+id/gps_popup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp" />
+
     <include layout="@layout/toolbar" />
 
     <LinearLayout
