--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
     <include layout="@layout/toolbar" />
 
     <LinearLayout
+        android:id="@+id/main_layout"
         android:background="@color/background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
