--- a/app/src/main/res/layout/high_score_list_item.xml
+++ b/app/src/main/res/layout/high_score_list_item.xml
@@ -20,6 +20,41 @@
             android:layout_marginTop="5dp"
             android:layout_weight="1"
             android:gravity="left"
+            android:text="@string/score_label"
+            android:textColor="@color/background"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/score"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:gravity="left"
+            android:textColor="@color/background"
+            android:textSize="24sp"
+            tools:text="0" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:gravity="left"
             android:text="@string/moves_label"
             android:textColor="@color/background"
             android:textSize="24sp"
