--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -77,7 +77,7 @@
                 android:textSize="20sp" />
 
             <Button
-                android:id="@+id/signin_signout"
+                android:id="@+id/login"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
