--- a/app/src/main/res/layout-land/activity_game.xml
+++ b/app/src/main/res/layout-land/activity_game.xml
@@ -1,241 +1,241 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/game_background"
-    android:gravity="center"
-    android:orientation="horizontal"
-    android:padding="20dp"
-    tools:context="com.rajatgoyal.puzzle15.ui.GameActivity">
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:background="@color/game_background"
+	android:gravity="center"
+	android:orientation="horizontal"
+	android:padding="20dp"
+	tools:context="com.rajatgoyal.puzzle15.ui.GameActivity">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical">
+	<LinearLayout
+		android:layout_width="wrap_content"
+		android:layout_height="match_parent"
+		android:gravity="center"
+		android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:gravity="center"
-            android:orientation="vertical">
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="0dp"
+			android:layout_weight="1"
+			android:gravity="center"
+			android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="@color/stats_text_color"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:text="@string/moves" />
+			<TextView
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:gravity="center"
+				android:text="@string/moves"
+				android:textColor="@color/stats_text_color"
+				android:textSize="18sp"
+				android:textStyle="bold" />
 
-            <View
-                android:layout_width="100dp"
-                android:layout_height="1dp"
-                android:layout_marginTop="5dp"
-                android:background="@color/stats_text_color" />
+			<View
+				android:layout_width="100dp"
+				android:layout_height="1dp"
+				android:layout_marginTop="5dp"
+				android:background="@color/stats_text_color" />
 
-            <TextView
-                android:id="@+id/moves"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="@color/stats_text_color"
-                android:textSize="30sp"
-                android:text="@string/initial_moves" />
-        </LinearLayout>
+			<TextView
+				android:id="@+id/moves"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:gravity="center"
+				android:text="@string/initial_moves"
+				android:textColor="@color/stats_text_color"
+				android:textSize="30sp" />
+		</LinearLayout>
 
-        <LinearLayout
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:gravity="center"
-            android:orientation="vertical">
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="0dp"
+			android:layout_weight="1"
+			android:gravity="center"
+			android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="@color/stats_text_color"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:text="@string/time" />
+			<TextView
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:gravity="center"
+				android:text="@string/time"
+				android:textColor="@color/stats_text_color"
+				android:textSize="18sp"
+				android:textStyle="bold" />
 
-            <View
-                android:layout_width="150dp"
-                android:layout_height="1dp"
-                android:layout_marginTop="5dp"
-                android:background="@color/stats_text_color" />
+			<View
+				android:layout_width="150dp"
+				android:layout_height="1dp"
+				android:layout_marginTop="5dp"
+				android:background="@color/stats_text_color" />
 
-            <TextView
-                android:id="@+id/timer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="@color/stats_text_color"
-                android:textSize="30sp"
-                tools:text="00:00:00" />
-        </LinearLayout>
+			<TextView
+				android:id="@+id/timer"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:gravity="center"
+				android:textColor="@color/stats_text_color"
+				android:textSize="30sp"
+				tools:text="00:00:00" />
+		</LinearLayout>
 
-    </LinearLayout>
+	</LinearLayout>
 
-    <androidx.cardview.widget.CardView
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_height="match_parent">
+	<androidx.cardview.widget.CardView
+		android:layout_width="0dp"
+		android:layout_height="match_parent"
+		android:layout_marginStart="20dp"
+		android:layout_marginLeft="20dp"
+		android:layout_weight="1">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:gravity="center"
+			android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_weight="1">
 
-                <com.rajatgoyal.puzzle15.view.Tile
-                    android:id="@+id/btn00"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp" />
+				<com.rajatgoyal.puzzle15.view.Tile
+					android:id="@+id/btn00"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_margin="1dp"
+					android:layout_weight="1" />
 
-                <com.rajatgoyal.puzzle15.view.Tile
-                    android:id="@+id/btn01"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp" />
+				<com.rajatgoyal.puzzle15.view.Tile
+					android:id="@+id/btn01"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_margin="1dp"
+					android:layout_weight="1" />
 
-                <com.rajatgoyal.puzzle15.view.Tile
-                    android:id="@+id/btn02"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp" />
+				<com.rajatgoyal.puzzle15.view.Tile
+					android:id="@+id/btn02"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_margin="1dp"
+					android:layout_weight="1" />
 
-                <com.rajatgoyal.puzzle15.view.Tile
-                    android:id="@+id/btn03"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp" />
+				<com.rajatgoyal.puzzle15.view.Tile
+					android:id="@+id/btn03"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_margin="1dp"
+					android:layout_weight="1" />
 
-            </LinearLayout>
+			</LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_weight="1">
 
-                <com.rajatgoyal.puzzle15.view.Tile
-                    android:id="@+id/btn10"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp" />
+				<com.rajatgoyal.puzzle15.view.Tile
+					android:id="@+id/btn10"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_margin="1dp"
+					android:layout_weight="1" />
 
-                <com.rajatgoyal.puzzle15.view.Tile
-                    android:id="@+id/btn11"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp" />
+				<com.rajatgoyal.puzzle15.view.Tile
+					android:id="@+id/btn11"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_margin="1dp"
+					android:layout_weight="1" />
 
-                <com.rajatgoyal.puzzle15.view.Tile
-                    android:id="@+id/btn12"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp" />
+				<com.rajatgoyal.puzzle15.view.Tile
+					android:id="@+id/btn12"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_margin="1dp"
+					android:layout_weight="1" />
 
-                <com.rajatgoyal.puzzle15.view.Tile
-                    android:id="@+id/btn13"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp" />
+				<com.rajatgoyal.puzzle15.view.Tile
+					android:id="@+id/btn13"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_margin="1dp"
+					android:layout_weight="1" />
 
-            </LinearLayout>
+			</LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_weight="1">
 
-                <com.rajatgoyal.puzzle15.view.Tile
-                    android:id="@+id/btn20"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp" />
+				<com.rajatgoyal.puzzle15.view.Tile
+					android:id="@+id/btn20"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_margin="1dp"
+					android:layout_weight="1" />
 
-                <com.rajatgoyal.puzzle15.view.Tile
-                    android:id="@+id/btn21"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp" />
+				<com.rajatgoyal.puzzle15.view.Tile
+					android:id="@+id/btn21"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_margin="1dp"
+					android:layout_weight="1" />
 
-                <com.rajatgoyal.puzzle15.view.Tile
-                    android:id="@+id/btn22"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp" />
+				<com.rajatgoyal.puzzle15.view.Tile
+					android:id="@+id/btn22"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_margin="1dp"
+					android:layout_weight="1" />
 
-                <com.rajatgoyal.puzzle15.view.Tile
-                    android:id="@+id/btn23"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp" />
+				<com.rajatgoyal.puzzle15.view.Tile
+					android:id="@+id/btn23"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_margin="1dp"
+					android:layout_weight="1" />
 
-            </LinearLayout>
+			</LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_weight="1">
 
-                <com.rajatgoyal.puzzle15.view.Tile
-                    android:id="@+id/btn30"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp" />
+				<com.rajatgoyal.puzzle15.view.Tile
+					android:id="@+id/btn30"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_margin="1dp"
+					android:layout_weight="1" />
 
-                <com.rajatgoyal.puzzle15.view.Tile
-                    android:id="@+id/btn31"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp" />
+				<com.rajatgoyal.puzzle15.view.Tile
+					android:id="@+id/btn31"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_margin="1dp"
+					android:layout_weight="1" />
 
-                <com.rajatgoyal.puzzle15.view.Tile
-                    android:id="@+id/btn32"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp" />
+				<com.rajatgoyal.puzzle15.view.Tile
+					android:id="@+id/btn32"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_margin="1dp"
+					android:layout_weight="1" />
 
-                <com.rajatgoyal.puzzle15.view.Tile
-                    android:id="@+id/btn33"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="1dp" />
+				<com.rajatgoyal.puzzle15.view.Tile
+					android:id="@+id/btn33"
+					android:layout_width="0dp"
+					android:layout_height="match_parent"
+					android:layout_margin="1dp"
+					android:layout_weight="1" />
 
-            </LinearLayout>
+			</LinearLayout>
 
-        </LinearLayout>
+		</LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+	</androidx.cardview.widget.CardView>
 
 </LinearLayout>
