--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,105 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/background"
-    android:gravity="center_horizontal"
-    tools:context="com.rajatgoyal.puzzle15.ui.MainActivity">
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:background="@color/background"
+	android:gravity="center_horizontal"
+	tools:context="com.rajatgoyal.puzzle15.ui.MainActivity">
 
-    <include layout="@layout/toolbar" />
+	<include layout="@layout/toolbar" />
 
-    <LinearLayout
-        android:layout_marginTop="50dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:padding="20dp"
-        android:orientation="horizontal">
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_marginTop="50dp"
+		android:gravity="center"
+		android:orientation="horizontal"
+		android:padding="20dp">
 
-        <ImageView
-            android:layout_width="250dp"
-            android:layout_height="200dp"
-            android:layout_weight="1"
-            android:contentDescription="@string/app_logo"
-            android:src="@drawable/icon" />
+		<ImageView
+			android:layout_width="250dp"
+			android:layout_height="200dp"
+			android:layout_weight="1"
+			android:contentDescription="@string/app_logo"
+			android:src="@drawable/icon" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:gravity="center"
+			android:orientation="vertical">
 
-            <Button
-                android:id="@+id/resume_game"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="@color/light"
-                android:text="@string/resume_game"
-                android:textAllCaps="false"
-                android:textColor="@color/background"
-                android:textSize="20sp"
-                android:visibility="gone" />
+			<Button
+				android:id="@+id/resume_game"
+				android:layout_width="200dp"
+				android:layout_height="wrap_content"
+				android:layout_margin="2dp"
+				android:background="@color/light"
+				android:text="@string/resume_game"
+				android:textAllCaps="false"
+				android:textColor="@color/background"
+				android:textSize="20sp"
+				android:visibility="gone" />
 
-            <Button
-                android:id="@+id/new_game"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="@color/light"
-                android:text="@string/new_game"
-                android:textAllCaps="false"
-                android:textColor="@color/background"
-                android:textSize="20sp" />
+			<Button
+				android:id="@+id/new_game"
+				android:layout_width="200dp"
+				android:layout_height="wrap_content"
+				android:layout_margin="2dp"
+				android:background="@color/light"
+				android:text="@string/new_game"
+				android:textAllCaps="false"
+				android:textColor="@color/background"
+				android:textSize="20sp" />
 
-            <Button
-                android:id="@+id/high_score"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="@color/light"
-                android:text="@string/high_score"
-                android:textAllCaps="false"
-                android:textColor="@color/background"
-                android:textSize="20sp" />
+			<Button
+				android:id="@+id/high_score"
+				android:layout_width="200dp"
+				android:layout_height="wrap_content"
+				android:layout_margin="2dp"
+				android:background="@color/light"
+				android:text="@string/high_score"
+				android:textAllCaps="false"
+				android:textColor="@color/background"
+				android:textSize="20sp" />
 
-            <Button
-                android:id="@+id/help"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="@color/light"
-                android:text="@string/rules"
-                android:textAllCaps="false"
-                android:textColor="@color/background"
-                android:textSize="20sp" />
+			<Button
+				android:id="@+id/help"
+				android:layout_width="200dp"
+				android:layout_height="wrap_content"
+				android:layout_margin="2dp"
+				android:background="@color/light"
+				android:text="@string/rules"
+				android:textAllCaps="false"
+				android:textColor="@color/background"
+				android:textSize="20sp" />
 
-            <Button
-                android:id="@+id/login"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="@color/light"
-                android:text="@string/signIn"
-                android:textAllCaps="false"
-                android:textColor="@color/background"
-                android:textSize="20sp" />
+			<Button
+				android:id="@+id/login"
+				android:layout_width="200dp"
+				android:layout_height="wrap_content"
+				android:layout_margin="2dp"
+				android:background="@color/light"
+				android:text="@string/signIn"
+				android:textAllCaps="false"
+				android:textColor="@color/background"
+				android:textSize="20sp" />
 
-            <Button
-                android:id="@+id/view_achievements"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="@color/light"
-                android:text="@string/view_achievements"
-                android:textAllCaps="false"
-                android:textColor="@color/background"
-                android:textSize="20sp" />
+			<Button
+				android:id="@+id/view_achievements"
+				android:layout_width="200dp"
+				android:layout_height="wrap_content"
+				android:layout_margin="2dp"
+				android:background="@color/light"
+				android:text="@string/view_achievements"
+				android:textAllCaps="false"
+				android:textColor="@color/background"
+				android:textSize="20sp" />
 
-        </LinearLayout>
+		</LinearLayout>
 
-    </LinearLayout>
+	</LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
