--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,112 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.rajatgoyal.puzzle15.ui.MainActivity">
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	tools:context="com.rajatgoyal.puzzle15.ui.MainActivity">
 
-    <FrameLayout
-        android:id="@+id/gps_popup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp" />
+	<FrameLayout
+		android:id="@+id/gps_popup"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentTop="true"
+		android:layout_centerHorizontal="true"
+		android:layout_marginTop="16dp" />
 
-    <include layout="@layout/toolbar" />
+	<include layout="@layout/toolbar" />
 
-    <LinearLayout
-        android:id="@+id/main_layout"
-        android:background="@color/background"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:padding="40dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="vertical">
+	<LinearLayout
+		android:id="@+id/main_layout"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="56dp"
+		android:layout_weight="1"
+		android:background="@color/background"
+		android:gravity="center"
+		android:orientation="vertical"
+		android:padding="40dp">
 
-        <ImageView
-            android:layout_margin="20dp"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:contentDescription="@string/app_logo"
-            android:src="@drawable/icon" />
+		<ImageView
+			android:layout_width="200dp"
+			android:layout_height="wrap_content"
+			android:layout_margin="20dp"
+			android:layout_weight="1"
+			android:contentDescription="@string/app_logo"
+			android:src="@drawable/icon" />
 
-        <Button
-            android:id="@+id/resume_game"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_weight="0"
-            android:background="@color/light"
-            android:text="@string/resume_game"
-            android:textAllCaps="false"
-            android:textColor="@color/background"
-            android:textSize="20sp"
-            android:visibility="gone"/>
+		<Button
+			android:id="@+id/resume_game"
+			android:layout_width="200dp"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="20dp"
+			android:layout_weight="0"
+			android:background="@color/light"
+			android:text="@string/resume_game"
+			android:textAllCaps="false"
+			android:textColor="@color/background"
+			android:textSize="20sp"
+			android:visibility="gone" />
 
-        <Button
-            android:id="@+id/new_game"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_weight="0"
-            android:background="@color/light"
-            android:text="@string/new_game"
-            android:textAllCaps="false"
-            android:textColor="@color/background"
-            android:textSize="20sp" />
+		<Button
+			android:id="@+id/new_game"
+			android:layout_width="200dp"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="10dp"
+			android:layout_weight="0"
+			android:background="@color/light"
+			android:text="@string/new_game"
+			android:textAllCaps="false"
+			android:textColor="@color/background"
+			android:textSize="20sp" />
 
-        <Button
-            android:id="@+id/high_score"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_weight="0"
-            android:background="@color/light"
-            android:text="@string/high_score"
-            android:textAllCaps="false"
-            android:textColor="@color/background"
-            android:textSize="20sp" />
+		<Button
+			android:id="@+id/high_score"
+			android:layout_width="200dp"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="10dp"
+			android:layout_weight="0"
+			android:background="@color/light"
+			android:text="@string/high_score"
+			android:textAllCaps="false"
+			android:textColor="@color/background"
+			android:textSize="20sp" />
 
-        <Button
-            android:id="@+id/help"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_weight="0"
-            android:background="@color/light"
-            android:text="@string/rules"
-            android:textAllCaps="false"
-            android:textColor="@color/background"
-            android:textSize="20sp" />
+		<Button
+			android:id="@+id/help"
+			android:layout_width="200dp"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="10dp"
+			android:layout_weight="0"
+			android:background="@color/light"
+			android:text="@string/rules"
+			android:textAllCaps="false"
+			android:textColor="@color/background"
+			android:textSize="20sp" />
 
-        <Button
-            android:id="@+id/login"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_weight="0"
-            android:background="@color/light"
-            android:text="@string/signIn"
-            android:textAllCaps="false"
-            android:textColor="@color/background"
-            android:textSize="20sp" />
+		<Button
+			android:id="@+id/login"
+			android:layout_width="200dp"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="10dp"
+			android:layout_weight="0"
+			android:background="@color/light"
+			android:text="@string/signIn"
+			android:textAllCaps="false"
+			android:textColor="@color/background"
+			android:textSize="20sp" />
 
-        <Button
-            android:id="@+id/view_achievements"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_weight="0"
-            android:background="@color/light"
-            android:text="@string/view_achievements"
-            android:textAllCaps="false"
-            android:textColor="@color/background"
-            android:textSize="20sp" />
+		<Button
+			android:id="@+id/view_achievements"
+			android:layout_width="200dp"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="10dp"
+			android:layout_weight="0"
+			android:background="@color/light"
+			android:text="@string/view_achievements"
+			android:textAllCaps="false"
+			android:textColor="@color/background"
+			android:textSize="20sp" />
 
-    </LinearLayout>
+	</LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
