--- a/app/src/main/res/layout/dialog_game_won.xml
+++ b/app/src/main/res/layout/dialog_game_won.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<pl.droidsonroids.gif.GifImageView android:src="@drawable/fireworks"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:background="@android:color/transparent"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+<pl.droidsonroids.gif.GifImageView xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="wrap_content"
+	android:layout_height="wrap_content"
+	android:layout_gravity="center"
+	android:background="@android:color/transparent"
+	android:src="@drawable/fireworks" />
