--- a/app/src/main/res/layout/dialog_high_score.xml
+++ b/app/src/main/res/layout/dialog_high_score.xml
@@ -1,61 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/light">
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:background="@color/light"
+	android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="5dp"
-        android:text="@string/high_scores"
-        android:textColor="@color/background"
-        android:textSize="20sp" />
+	<TextView
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:gravity="center"
+		android:padding="5dp"
+		android:text="@string/high_scores"
+		android:textColor="@color/background"
+		android:textSize="20sp" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/background"
-        android:layout_margin="5dp" />
+	<View
+		android:layout_width="match_parent"
+		android:layout_height="1dp"
+		android:layout_margin="5dp"
+		android:background="@color/background" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:weightSum="4">
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="40dp"
+		android:weightSum="4">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textSize="18sp"
-            android:text="@string/score" />
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:gravity="center"
+			android:text="@string/score"
+			android:textSize="18sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textSize="18sp"
-            android:text="@string/moves" />
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:gravity="center"
+			android:text="@string/moves"
+			android:textSize="18sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:textSize="18sp"
-            android:text="@string/time" />
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:layout_weight="2"
+			android:gravity="center"
+			android:text="@string/time"
+			android:textSize="18sp" />
 
-    </LinearLayout>
+	</LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/high_scores_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center" />
+	<androidx.recyclerview.widget.RecyclerView
+		android:id="@+id/high_scores_list"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_gravity="center"
+		android:gravity="center" />
 
 </LinearLayout>
